@@ -1,3 +1,8 @@
+2008-01-29  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/make-msi.pl (nsis_parse_line): Skip including the file
+	Memento.nsh.
+
 2008-01-28  Marcus Brinkmann  <marcus@g10code.de>
 
 	* packages/packages.current: Update gpgme and kleopatra.
